Fixed safe area bar issue on iOS.

--- a/Source/Web/Styles/board.css
+++ b/Source/Web/Styles/board.css
@@ -1,3 +1,8 @@
+body 
+{
+    background-color: black;
+}
+
 .content 
 {
     display: flex;
